src/test/deca/codegen/invalid/execution_error_null_dereferencing.deca
// Description:
//  invalid test null dereferencing
//
//Result:
// [Begin Result]
//Error : Null pointer dereferencing
// [End Result]
//
// History:
// created on 07/01/2025

class MyClass {
    int a = 0;
}

{
    MyClass obj = null;
    int b = obj.a;
}
